Refatoração da tabela de eventos na tela de gráficos

--- a/app/src/main/res/layout/fragment_grafico.xml
+++ b/app/src/main/res/layout/fragment_grafico.xml
@@ -19,28 +19,32 @@ tools:context=".fragment.GraficoFragment">
         android:textColor="#0F184C" />
 
     <include
+        android:id="@+id/diasSemana"
+        layout="@layout/layout_checks_dias"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtTituloTabela" />
+
+    <include
         android:id="@+id/halter"
         layout="@layout/layout_checks_exercicio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtTituloTabela"
-        android:layout_marginTop="3dp" />
+        android:layout_below="@+id/diasSemana" />
 
     <include
         android:id="@+id/pilula"
         layout="@layout/layout_checks_remedio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/halter"
-        android:layout_marginTop="6dp" />
+        android:layout_below="@+id/halter" />
 
     <include
         android:id="@+id/bebida"
         layout="@layout/layout_checks_bebida"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/pilula"
-        android:layout_marginTop="6dp" />
+        android:layout_below="@+id/pilula" />
 
     <TextView
         android:id="@+id/txtTituloGrafico"
