--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="darkSecondary">#131627</color>
     -->
 
+    <color name="ic_diariosono_background">#3A416B</color>
+
     <color name="white">#FFFFFFFF</color>
 
     <color name="botaoSelecionado">#F3C641</color>
