--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -12,9 +12,11 @@
         android:id="@+id/edtNovoNome"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/edit_text_border"
         android:hint="Nome"
+        android:inputType="textPersonName"
+        android:maxLength="50"
         android:paddingLeft="40px"
         android:textAlignment="viewStart"
         android:textColor="#131627"
@@ -24,128 +26,127 @@
         app:layout_constraintEnd_toEndOf="@+id/edtNovoDataNascimento"
         app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="@+id/edtNovoDataNascimento"
-        app:layout_constraintTop_toTopOf="parent"
-        android:inputType="textPersonName"
-        android:maxLength="50" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtNovoDataNascimento"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_border"
         android:hint="Data de Nascimento"
+        android:inputType="date"
         android:paddingLeft="40px"
         android:textAlignment="viewStart"
         android:textColor="#131627"
         android:textColorLink="#FFFFFF"
         android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/edtNovoCpf"
         app:layout_constraintEnd_toEndOf="@+id/edtNovoCpf"
         app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="@+id/edtNovoCpf"
-        app:layout_constraintTop_toBottomOf="@+id/edtNovoNome"
-        android:inputType="date"/>
+        app:layout_constraintTop_toBottomOf="@+id/edtNovoNome" />
 
     <EditText
         android:id="@+id/edtNovoCpf"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_border"
         android:hint="CPF"
+        android:inputType="number"
+        android:maxLength="11"
         android:paddingLeft="40px"
         android:textAlignment="viewStart"
         android:textColor="#131627"
         android:textColorLink="#FFFFFF"
         android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/edtNovoTelefone"
         app:layout_constraintEnd_toEndOf="@+id/edtNovoTelefone"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/edtNovoTelefone"
-        app:layout_constraintTop_toBottomOf="@+id/edtNovoDataNascimento"
-        android:inputType="number"
-        android:maxLength="11"/>
+        app:layout_constraintTop_toBottomOf="@+id/edtNovoDataNascimento" />
 
     <EditText
         android:id="@+id/edtNovoTelefone"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_border"
         android:hint="Telefone"
+        android:inputType="phone"
+        android:maxLength="11"
         android:paddingLeft="40px"
         android:textAlignment="viewStart"
         android:textColor="#131627"
         android:textColorLink="#FFFFFF"
         android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/edtNovoLogin"
         app:layout_constraintEnd_toEndOf="@+id/edtNovoLogin"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/edtNovoLogin"
-        app:layout_constraintTop_toBottomOf="@+id/edtNovoCpf"
-        android:inputType="phone"
-        android:maxLength="11" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNovoCpf" />
 
     <EditText
         android:id="@+id/edtNovoLogin"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_border"
         android:hint="Usuário"
         android:inputType="textPersonName"
+        android:maxLength="20"
         android:paddingLeft="40px"
         android:textAlignment="viewStart"
         android:textColor="#131627"
         android:textColorLink="#FFFFFF"
         android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/edtNovoSenha"
         app:layout_constraintEnd_toEndOf="@+id/edtNovoSenha"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/edtNovoSenha"
-        app:layout_constraintTop_toBottomOf="@+id/edtNovoTelefone"
-        android:maxLength="20" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNovoTelefone" />
 
     <EditText
         android:id="@+id/edtNovoSenha"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_border"
         android:hint="Senha"
+        android:inputType="textPassword"
+        android:maxLength="8"
         android:paddingLeft="40px"
         android:textAlignment="viewStart"
         android:textColor="#131627"
         android:textColorLink="#FFFFFF"
         android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/edtNovoConfirmarSenha"
         app:layout_constraintEnd_toEndOf="@+id/btCriar"
         app:layout_constraintHorizontal_bias="0.563"
         app:layout_constraintStart_toStartOf="@+id/btCriar"
-        app:layout_constraintTop_toBottomOf="@+id/edtNovoLogin"
-        android:inputType="textPassword"
-        android:maxLength="8" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNovoLogin" />
 
     <EditText
         android:id="@+id/edtNovoConfirmarSenha"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/edit_text_border"
         android:hint="Confirmar Senha"
+        android:inputType="textPassword"
+        android:maxLength="8"
         android:paddingLeft="40px"
         android:textAlignment="viewStart"
         android:textColor="#131627"
         android:textColorLink="#FFFFFF"
         android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btCriar"
         app:layout_constraintEnd_toEndOf="@+id/btCriar"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btCriar"
-        app:layout_constraintTop_toBottomOf="@+id/edtNovoSenha"
-        android:inputType="textPassword"
-        android:maxLength="8" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNovoSenha" />
 
     <Button
         android:id="@+id/btCriar"
         android:layout_width="271dp"
         android:layout_height="55dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="#0F184C"
         android:text="Salvar"
         android:textColor="#FFFFFF"
