ajustes espaçamento fragment_diario

--- a/app/src/main/res/layout/fragment_diario.xml
+++ b/app/src/main/res/layout/fragment_diario.xml
@@ -8,10 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutCalendario"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/layoutBotoesEvento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,13 +18,12 @@
         <devs.mulham.horizontalcalendar.HorizontalCalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="0dp"
 
             android:background="#0F184C"
-            app:layout_constraintBottom_toBottomOf="parent"
 
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:selectorColor="#F3C641"
             app:sizeMiddleText="14dp"
             app:textColorNormal="#FFFFFF"
@@ -38,8 +35,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutBotoesEvento"
         android:layout_width="370dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/layoutNomesEvento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,8 +102,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutNomesEvento"
         android:layout_width="370dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/layoutBotoesSubEvento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,11 +117,11 @@
             android:layout_marginStart="14dp"
             android:background="@android:color/transparent"
 
-            android:text="Sono"
-            android:textColor="#101951"
-            android:textAlignment="center"
-            android:textSize="12dp"
             android:paddingTop="0dp"
+            android:text="Sono"
+            android:textAlignment="center"
+            android:textColor="#101951"
+            android:textSize="12dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -135,11 +134,11 @@
             android:layout_marginStart="14dp"
             android:background="@android:color/transparent"
 
-            android:text="Exercício"
-            android:textColor="#101951"
-            android:textAlignment="center"
-            android:textSize="12dp"
             android:paddingTop="0dp"
+            android:text="Exercício"
+            android:textAlignment="center"
+            android:textColor="#101951"
+            android:textSize="12dp"
 
             app:layout_constraintStart_toEndOf="@+id/txtNomeEventoSono"
             app:layout_constraintTop_toTopOf="parent" />
@@ -151,11 +150,11 @@
             android:layout_marginStart="14dp"
             android:background="@android:color/transparent"
 
-            android:text="Remédio"
-            android:textColor="#101951"
-            android:textAlignment="center"
-            android:textSize="12dp"
             android:paddingTop="0dp"
+            android:text="Remédio"
+            android:textAlignment="center"
+            android:textColor="#101951"
+            android:textSize="12dp"
 
             app:layout_constraintStart_toEndOf="@+id/txtNomeEventoExercicio"
             app:layout_constraintTop_toTopOf="parent" />
@@ -166,16 +165,22 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
 
-            android:text="Bebida"
-            android:textColor="#101951"
-            android:textAlignment="center"
-            android:textSize="12dp"
             android:paddingTop="0dp"
+            android:text="Bebida"
+            android:textAlignment="center"
+            android:textColor="#101951"
+            android:textSize="12dp"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txtNomeEventoRemedio"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.4" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="layoutBotoesEvento,layoutNomesEvento" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -183,8 +188,9 @@
         android:id="@+id/layoutBotoesSubEvento"
         android:layout_width="360dp"
         android:layout_height="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginLeft="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/spnMomentoHora"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutNomesEvento">
 
@@ -192,10 +198,10 @@
             android:id="@+id/chkSonoDeitar"
             android:layout_width="165dp"
             android:layout_height="50dp"
+            android:buttonTint="#F3C641"
             android:text="Deitar"
             android:textColor="#071025"
             android:textSize="20dp"
-            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.076"
@@ -207,10 +213,10 @@
             android:id="@+id/chkSonoLevantar"
             android:layout_width="165dp"
             android:layout_height="50dp"
+            android:buttonTint="#F3C641"
             android:text="Levantar"
             android:textColor="#071025"
             android:textSize="20dp"
-            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.923"
@@ -222,10 +228,10 @@
             android:id="@+id/chkBebidaCafe"
             android:layout_width="165dp"
             android:layout_height="50dp"
+            android:buttonTint="#F3C641"
             android:text="Café"
             android:textColor="#071025"
             android:textSize="20dp"
-            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.077"
@@ -237,10 +243,10 @@
             android:id="@+id/chkBebidaCha"
             android:layout_width="165dp"
             android:layout_height="50dp"
+            android:buttonTint="#F3C641"
             android:text="Chá"
             android:textColor="#071025"
             android:textSize="20dp"
-            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.922"
@@ -252,10 +258,10 @@
             android:id="@+id/chkBebidaRefrigerante"
             android:layout_width="165dp"
             android:layout_height="50dp"
+            android:buttonTint="#F3C641"
             android:text="Refrigerante"
             android:textColor="#071025"
             android:textSize="20dp"
-            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.073"
@@ -267,10 +273,10 @@
             android:id="@+id/chkBebidaAlcool"
             android:layout_width="165dp"
             android:layout_height="50dp"
+            android:buttonTint="#F3C641"
             android:text="Álcool"
             android:textColor="#071025"
             android:textSize="20dp"
-            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.928"
@@ -284,24 +290,26 @@
         android:id="@+id/spnMomentoHora"
         android:layout_width="370dp"
         android:layout_height="150dp"
-        android:layout_marginTop="0dp"
         android:theme="@style/MyTimePicker"
         android:timePickerMode="spinner"
-        app:layout_constraintTop_toBottomOf="@+id/layoutBotoesSubEvento"
-        tools:layout_editor_absoluteX="11dp" />
+        app:layout_constraintBottom_toTopOf="@+id/edtObservacao"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutBotoesSubEvento" />
 
     <EditText
         android:id="@+id/edtObservacao"
         android:layout_width="340dp"
         android:layout_height="40dp"
         android:layout_marginLeft="1dp"
-        android:layout_marginTop="2dp"
         android:layout_marginRight="1dp"
         android:background="@drawable/edit_text_border"
         android:hint="Observação"
         android:inputType="text"
         android:paddingLeft="8dp"
         android:paddingTop="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent"
@@ -311,11 +319,13 @@
         android:id="@+id/btnSalvar"
         android:layout_width="150dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="#101951"
         android:text="Salvar"
+
         android:textColor="#FFFFFF"
         app:cornerRadius="4dp"
-
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.936"
         app:layout_constraintStart_toStartOf="parent"
