--- a/app/src/main/res/layout/fragment_diario.xml
+++ b/app/src/main/res/layout/fragment_diario.xml
@@ -208,7 +208,8 @@
             app:layout_constraintHorizontal_bias="0.076"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.091" />
+            app:layout_constraintVertical_bias="0.091"
+            style="@style/CustomCheckbox" />
 
         <CheckBox
             android:id="@+id/chkSonoLevantar"
@@ -223,7 +224,8 @@
             app:layout_constraintHorizontal_bias="0.923"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.094" />
+            app:layout_constraintVertical_bias="0.094"
+            style="@style/CustomCheckbox" />
 
         <CheckBox
             android:id="@+id/chkBebidaCafe"
@@ -238,7 +240,8 @@
             app:layout_constraintHorizontal_bias="0.077"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.093" />
+            app:layout_constraintVertical_bias="0.093"
+            style="@style/CustomCheckbox" />
 
         <CheckBox
             android:id="@+id/chkBebidaCha"
@@ -253,7 +256,8 @@
             app:layout_constraintHorizontal_bias="0.922"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.093" />
+            app:layout_constraintVertical_bias="0.093"
+            style="@style/CustomCheckbox" />
 
         <CheckBox
             android:id="@+id/chkBebidaRefrigerante"
@@ -268,7 +272,8 @@
             app:layout_constraintHorizontal_bias="0.073"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="1.0"
+            style="@style/CustomCheckbox"/>
 
         <CheckBox
             android:id="@+id/chkBebidaAlcool"
@@ -283,7 +288,8 @@
             app:layout_constraintHorizontal_bias="0.928"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="1.0"
+            style="@style/CustomCheckbox"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
