--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,4 +52,10 @@
         <item name="android:font" tools:targetApi="o">@font/roboto</item>
     </style>
 
+    <style name="CustomCheckbox" parent="@style/Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/custom_checkbox</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:paddingLeft">5dp</item>
+    </style>
+
 </resources>
